--- a/reactfrontend/package.json
+++ b/reactfrontend/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.2.3",
+    "create-app-react": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.9.0",
     "web-vitals": "^2.1.4"
+
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,6 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -38,9 +41,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-    
-      
 
+  
   }
-
 }
